Replaced profile_pic. Updated copy in About section. Updated css in Navbar and for all buttons.

--- a/src/components/Navbar/style.css
+++ b/src/components/Navbar/style.css
@@ -16,3 +16,16 @@
   display: flex;
   justify-self: flex-end !important;
 }
+
+/* .navbar-toggler-icon {
+  color: white !important;
+} */
+
+@media only screen and (max-width: 992px) {
+  .navbar-logo {
+    display: none;
+  }
+  .navbar-links {
+    flex-direction: column;
+  }
+}
