--- a/src/components/Contact/style.css
+++ b/src/components/Contact/style.css
@@ -12,8 +12,16 @@
 
 .contact-form {
   margin: 0 !important;
+  width: 75%;
 }
 
 .contact-header {
   color: #fff;
+}
+
+.contact-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
 }
