--- a/src/components/Skills/style.css
+++ b/src/components/Skills/style.css
@@ -3,3 +3,27 @@
   flex-direction: column;
   align-items: center;
 }
+
+.list-group-item {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.skills {
+  display: flex;
+}
+
+.skill-group {
+  margin-right: 18px;
+}
+
+@media only screen and (max-width: 1200px) {
+  .skills {
+    flex-direction: column;
+  }
+  .skill-group {
+    margin-right: 0;
+    margin-bottom: 18px;
+  }
+}
