--- a/src/components/ProjectCard/style.css
+++ b/src/components/ProjectCard/style.css
@@ -1,7 +1,7 @@
 .card-button:hover,
 .card-button:focus,
 .card-button:active {
-  background-color: #fca311 !important;
-  border-color: #fca311 !important;
-  color: #000;
+  background-color: #000 !important;
+  border-color: #000 !important;
+  color: #fca311 !important;
 }
