--- a/src/components/About/style.css
+++ b/src/components/About/style.css
@@ -25,3 +25,9 @@
   border-color: #fff !important;
   color: #000;
 }
+
+.col-photo {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
