Made About and Skills sections responsive.

--- a/src/App.css
+++ b/src/App.css
@@ -22,3 +22,12 @@ section {
 .grow:hover {
   transform: scale(1.1);
 }
+
+@media only screen and (max-width: 600px) {
+  .grow {
+    transition: none;
+  }
+  .grow:hover {
+    transform: none;
+  }
+}
