--- a/src/components/About/style.css
+++ b/src/components/About/style.css
@@ -31,3 +31,9 @@
   justify-content: center;
   align-items: center;
 }
+
+@media only screen and (min-width: 992px) {
+  .profile-photo {
+    max-width: 50%;
+  }
+}
